Fix EMStoreIntegrationTest